# WrCoffea

./: .gitignore  Asymptotic_limit.sh  CollectObject.py  README.md  StackPlots_multifile.C  WR_cross_sections.txt  analyzer.py  bjet.csv  check_genEventSumw.py  compare_root_files.py  copy_wr_signals.sh  datacards.py  datacards_3j.py  datacards_cross.py  datasets.txt  files.txt  fill_runs_genEventSumw.py  fill_signal_config_sumw_and_xsdb.py  limitPlotter.py  limitPlotter_mN.py  make_csv_file.py  plot_expected_limits_fixedMW.py  pr_description_draft.md  pyproject.toml  recalc_genEventSumw_drop_nevts.py  rename_signal_dirs.sh  rename_wr_labels.py  requirements.txt  run_me.sh  topevents.csv
.github/: copilot-instructions.md
analyzer/: __main__.py  cli.py  datasets.py  process.py  run_analysis.py
combine_framework/: datacards.py  masses.txt  runcombine.sh  v1_Asymptotic_limit.sh
data/: Run3Summer22_mass_points.csv
datasets/: DYJetstoLL2018.yaml  TTTo2L2Nu2018.yaml  TTTo2L2Nu2018_full.txt
docs/: adding_a_new_era.md  condor.md  filesets.md  getting_started.md  run_analysis.md  run_combine.md  skimming.md
python/: analysis_config.py  fileset_utils.py  fileset_validation.py  jme_jetid.py  preprocess_utils.py  run_utils.py  save_hists.py
run2_signals/: mass_points_test.txt
samples/: DYJetsToLL18.txt  WJetsToLNu18.txt  findFiles.py
scripts/: .check_era_state_Run3Summer23.json  full_fileset.py  genEventSumw.py  gen_event_sumw.py  skimmed_fileset.py  sum_genEventSumw_from_events.py
src/: __init__.py  analyser_btag.py  analyzer.py  analyzer_3j.py  analyzer_old.py  analyzer_test.py  histograms.py  scale_factors.py
test/: compare_skimmed_unskimmed.py  run_analysis_test.py  test_skim_one.py
tests/: test_analysis_config.py  test_analyzer.py  test_cli_utils.py  test_das_utils.py  test_era_utils.py  test_event_weights.py  test_fileset_validation.py  test_histograms.py  test_run_analysis.py  test_save_hists.py  test_scale_factors_integration.py  test_selections.py  test_skim_merge.py  test_skimmer.py  test_xrootd_fallback.py
utils/: __init__.py
wrcoffea/: MuonScaRe.py  analysis_config.py  analyzer.py  cli_utils.py  config.yaml  config_fixed.yaml  das_utils.py  era_utils.py  fileset_utils.py  histograms.py  orig_config.yaml  save_hists.py  scale_factors.py  skim_merge.py  skimmer.py  working_tested_scale_factors.py  (+1 more)
(+173 files in other folders)
