[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "wrcoffea"
version = "0.1.0"
description = "Coffea-based WR→Nℓ→ℓℓjj analysis"
requires-python = ">=3.9"
dependencies = [
    "coffea>=2025.7,<2026",
    "awkward>=2.8,<3",
    "hist>=2.8,<3",
    "correctionlib>=2.7,<3",
    "numpy>=2.0,<3",
    "dask>=2024.8,<2026",
    "dask-awkward>=2025.5,<2026",
    "uproot>=5.6,<6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.package-data]
wrcoffea = ["config.yaml"]

[tool.setuptools.packages.find]
include = ["wrcoffea*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
