[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "wrcoffea"
version = "0.1.0"
description = "Coffea-based WR→Nℓ→ℓℓjj analysis"
requires-python = ">=3.10"
dependencies = [
    "coffea>=2025.12.0,<2026",
    "awkward>=2.8.12,<3",
    "hist>=2.9.2,<3",
    "correctionlib>=2.7.0,<3",
    "numpy>=2.3.5,<3",
    "matplotlib>=3.10.8",
    "mplhep>=0.4.1",
    "dask[distributed]>=2025.3.1,<2026",
    "dask-awkward>=2025.5,<2026",
    "uproot>=5.7.1,<6",
    "pyyaml>=6.0.3",
    "fsspec-xrootd",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.package-data]
wrcoffea = ["config.yaml"]

[tool.setuptools.packages.find]
include = ["wrcoffea*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
